inputpanelv1window: fix showing and hiding

Instead of InputMethod directly calling showClient() on the input panel,
call methods that properly show or hide the panel as needed, with readyForPainting
set appropriately. This removes the cases where it's shown without being ready for
painting, which causes crashes.

BUG: 459404


(cherry picked from commit b4e94438209e66e5fd303483f8e32147fb19f5ef)